--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       }
 
       div#container {
-        width: 1000px;
-        height: 400px;
-        border: 1px solid black;
+        width: 150px;
+        height: 50px;
+        /* border: 1px solid black; */
       }
     </style>
   </head>
